--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>P2P Share - Chia sẻ file trực tiếp</title>
+    <title>CHUM P2P - Chia sẻ file trực tiếp</title>
     <meta name="description"
         content="Chia sẻ file P2P trực tiếp giữa các thiết bị, không qua server, bảo mật end-to-end">
     <link rel="stylesheet" href="styles.css">
@@ -23,7 +23,7 @@
                     <path d="M2 17l10 5 10-5" />
                     <path d="M2 12l10 5 10-5" />
                 </svg>
-                <span class="logo-text">P2P Share</span>
+                <span class="logo-text">CHUM P2P</span>
             </div>
             <div class="header-actions">
                 <a href="https://github.com/Chumvn/p2p" target="_blank" class="github-link" title="GitHub">
