--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div class="container">
             <!-- Connection Status -->
             <div class="status-card" id="statusCard">
+                <div class="my-nickname" id="myNickname">
+                    <!-- Nickname will be set by JS -->
+                </div>
                 <div class="status-indicator" id="statusIndicator">
                     <span class="status-dot"></span>
                     <span class="status-text" id="statusText">Đang khởi tạo...</span>
